# med-lab

./: CMakeLists.txt  GoogleClient.hpp  Main.qml  PathGenerator.hpp  httpclient.h  main.cpp  main.qml  readme.md
.github/actions/qt-build/: action.yml
.github/workflows/: qt-build.yml  qt-deploy.yml  win-build.yml  win-release.yml
components/: Button.qml  CMakeLists.txt
resources/components/: CMakeLists.txt
src/: GoogleClient.hpp  HttpClient.cc  Stubs.hpp  httpclient.cc
